--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "ozgend",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "eslint": "^5.15.3",
