--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "mqtt": "^3.0.0",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
